--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "lint": "^0.8.19",
     "ofetch": "^1.4.0",
     "vue": "^3.4.37"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^3.7.3",
     "@ricons/ionicons5": "^0.12.0",
     "@vicons/ionicons5": "^0.12.0",
     "@vitejs/plugin-vue": "^5.1.2",
+    "eslint": "^9.11.1",
     "naive-ui": "^2.40.1",
     "sass-embedded": "^1.79.4",
     "typescript": "^5.5.3",
