--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,14 @@ jobs:
         with:
           node-version: '18.20'
 
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./youtube-download/client  # Укажи путь к проекту, если нужен
+  
+      - name: Build project
+        run: npm run build
+        working-directory: ./youtube-download/client
+
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
         with:
