--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: './client/'  # Укажи путь к проекту, если нужен
   
-      - name: Build project
+      - name: Build application
         run: npm run build
-        working-directory: ./client
 
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
