--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,9 @@ jobs:
           node-version: '18.20'
 
       - name: Install dependencies
+        run: npm init
+
+      - name: Install dependencies
         run: npm install
   
       - name: Build application
