--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,7 @@ jobs:
           node-version: '18.20'
 
       - name: Install dependencies
-        run: npm init
-
-      - name: Install dependencies
-        run: npm install
+        run: npm ci
   
       - name: Build application
         run: npm run build
