--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,9 +17,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-  
-      - name: Build application
+        working-directory: ./client
+        
+      - name: Build
         run: npm run build
+        working-directory: ./client
 
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
