--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./client
+        working-directory: client
         
       - name: Build
         run: npm run build
-        working-directory: ./client
+        working-directory: client
 
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
