--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18.20'
-          
+          node-version: '18.x'
+
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
         with:
