--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,14 +9,28 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: '18.x'
+            node-version: ${{ matrix.node-version }}
+            cache: 'npm'
+        
+      - name: Install supertest, mocha, chai
+        run: npm i -g -D supertest mocha chai mochawesome
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+        
 
       - name: Run deployment commands on server
         uses: appleboy/ssh-action@v0.1.4
