--- a/client/.github/workflows/deploy.yml
+++ b/client/.github/workflows/deploy.yml
@@ -9,27 +9,21 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-            node-version: ${{ matrix.node-version }}
-            cache: 'npm'
-        
-      - name: Install supertest, mocha, chai
-        run: npm i -g -D supertest mocha chai mochawesome
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+          node-version: '18.x'
+
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./youtube-download/client  # Укажи путь к проекту, если нужен
+
+      - name: Build project
+        run: npm run build
         
 
       - name: Run deployment commands on server
