ci: deploy node version fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
           script: |
             cd ./youtube-download
             git pull
-            echo '' | sudo ./start_docker.sh
+            sudo ./start_docker.sh
