--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASSWORD }}
           script: |
-            sudo nvm use 18.20.4
+            command -v nvm
             cd ./youtube-download
             git pull
             sudo ./start_docker.sh
