--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,11 @@ upstream server {
 server {
     listen       80;
 
+    root /usr/share/nginx
+
+    error_page 403 /error/index.html;
+    error_page 404 /error/index.html;
+
     location / {
         root /usr/share/nginx/html;  # Путь к папке dist, которая монтируется в контейнере
         index index.html;
