--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,11 @@ server {
     error_page 403 /error/index.html;
     error_page 404 /error/index.html;
 
+    location = /error/index.html {
+        root /usr/share/nginx/error/index.html;
+        internal;
+    }
+
     location / {
         root /usr/share/nginx/html;  # Путь к папке dist, которая монтируется в контейнере
         index index.html;
