test: error page

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,12 +9,10 @@ upstream server {
 server {
     listen       80;
 
-    root /usr/share/nginx
-
     error_page 403 /error/index.html;
     error_page 404 /error/index.html;
 
-    location = /error/index.html {
+    location = /custom_40x.html {
         root /usr/share/nginx/error/index.html;
         internal;
     }
