--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,5 +30,6 @@ services:
     volumes: 
       - ./nginx:/etc/nginx/conf.d/
       - ./nginx/dist:/usr/share/nginx/html
+      - ./nginx/error:/usr/share/nginx/error
     networks:
       - dev
