--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ server {
     error_page 404 /error/index.html;
 
     location = /custom_40x.html {
-        root /usr/share/nginx/error/index.html;
+        root /usr/share/nginx/error;
         internal;
     }
 
