--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,10 +9,9 @@ upstream server {
 server {
     listen       80;
 
-    error_page 403 /error/index.html;
-    error_page 404 /error/index.html;
+    error_page 403 /custom_403.html;
 
-    location = /custom_40x.html {
+    location = /custom_403.html {
         root /usr/share/nginx/error;
         internal;
     }
