fix: ngix config

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -17,11 +17,11 @@ server {
     }
 
     location / {
-        root /usr/share/nginx/html;  # Путь к папке dist, которая монтируется в контейнере
+        root /usr/share/nginx/html; 
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-g
+
     location /api/ {
         proxy_pass http://server/;
         proxy_set_header Host $host;
