--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,18 +9,22 @@ upstream server {
 server {
     listen       80;
 
-    error_page 403 /custom_403.html;
+    # error_page 403 /custom_403.html;
 
-    location = /custom_403.html {
-        root /usr/share/nginx/error;
-        internal;
-    }
+    # location = /custom_403.html {
+    #     root /usr/share/nginx/error;
+    #     internal;
+    # }
 
     location / {
         root /usr/share/nginx/html; 
         index index.html;
         try_files $uri $uri/ /index.html;
     }
+
+    # location /test403 {
+    #     return 403;
+    # }
 
     location /api/ {
         proxy_pass http://server/;
