--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
+    "axios": "^1.7.7",
     "file-type": "^16.5.3",
     "nestjs-fingerprint": "^1.0.4",
     "reflect-metadata": "^0.1.13",
